modify gui
