# shoppingcartclient/src/app/common/rest/services/shoppingcart.service.ts
@@ -19,6 +19,7 @@ class ShoppingcartService extends __BaseService {
   static readonly getPath = '/shoppingcart/{cart_name}';
   static readonly createPath = '/shoppingcart';
   static readonly updatePath = '/shoppingcart';
+  static readonly deleteItemFromCartPath = '/shoppingcart/{cart_name}/{product_name}';
 
   constructor(
     config: __Configuration,
@@ -140,9 +141,74 @@ class ShoppingcartService extends __BaseService {
       __map(_r => _r.body as boolean)
     );
   }
+
+  /**
+   * delete item from Shopping Cart
+   * @param params The `ShoppingcartService.DeleteItemFromCartParams` containing the following parameters:
+   *
+   * - `product_name`: Product Name
+   *
+   * - `cart_name`: Cart Name
+   *
+   * @return OK
+   */
+  deleteItemFromCartResponse(params: ShoppingcartService.DeleteItemFromCartParams): __Observable<__StrictHttpResponse<boolean>> {
+    let __params = this.newParams();
+    let __headers = new HttpHeaders();
+    let __body: any = null;
+
+
+    let req = new HttpRequest<any>(
+      'DELETE',
+      this.rootUrl + `/shoppingcart/${encodeURIComponent(params.cartName)}/${encodeURIComponent(params.productName)}`,
+      __body,
+      {
+        headers: __headers,
+        params: __params,
+        responseType: 'text'
+      });
+
+    return this.http.request<any>(req).pipe(
+      __filter(_r => _r instanceof HttpResponse),
+      __map((_r) => {
+        return (_r as HttpResponse<any>).clone({ body: (_r as HttpResponse<any>).body === 'true' }) as __StrictHttpResponse<boolean>
+      })
+    );
+  }
+  /**
+   * delete item from Shopping Cart
+   * @param params The `ShoppingcartService.DeleteItemFromCartParams` containing the following parameters:
+   *
+   * - `product_name`: Product Name
+   *
+   * - `cart_name`: Cart Name
+   *
+   * @return OK
+   */
+  deleteItemFromCart(params: ShoppingcartService.DeleteItemFromCartParams): __Observable<boolean> {
+    return this.deleteItemFromCartResponse(params).pipe(
+      __map(_r => _r.body as boolean)
+    );
+  }
 }
 
 module ShoppingcartService {
+
+  /**
+   * Parameters for deleteItemFromCart
+   */
+  export interface DeleteItemFromCartParams {
+
+    /**
+     * Product Name
+     */
+    productName: string;
+
+    /**
+     * Cart Name
+     */
+    cartName: string;
+  }
 }
 
 export { ShoppingcartService }
