# shoppingcartclient/swagger_json/api.yml
@@ -93,6 +93,32 @@ paths:
           description: OK
           schema:
             type: boolean
+  "/shoppingcart/{cart_name}/{product_name}":
+    delete:
+      tags:
+        - shoppingcart
+      summary:  delete item from Shopping Cart
+      operationId: deleteItemFromCart
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - in: path
+          name: cart_name
+          type:  string
+          required: true
+          description:  Cart Name
+        - in: path
+          name: product_name
+          type:  string
+          required: true
+          description:  Product Name
+      responses:
+        '200':
+          description: OK
+          schema:
+            type: boolean
 definitions:
   Product:
     type: object
